--- a/src/view/main.fxml
+++ b/src/view/main.fxml
@@ -6,7 +6,7 @@
 
 <BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="controller.MainController">
     <top>
-        <TextField fx:id="searchField" promptText="Buscar por PID..." />
+        <TextField fx:id="searchField" promptText="Buscar por PID o nombre..." />
     </top>
     <center>
         <ListView fx:id="processListView" />
@@ -15,6 +15,7 @@
         <HBox alignment="CENTER" spacing="10">
             <Button fx:id="increasePriorityButton" text="Aumentar Prioridad" onAction="#increasePriority" />
             <Button fx:id="killProcessButton" text="Detener Proceso" onAction="#killProcess" />
+            <Button fx:id="pauseResumeButton" text="Pausar/Reanudar Proceso" onAction="#pauseResumeProcess" />
         </HBox>
     </bottom>
 </BorderPane>
